--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
 
 /* CSS Document */
 html, body {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  font-family: "Yu Gothic Medium", "游ゴシック Medium", YuGothic, "游ゴシック体", "ヒラギノ角ゴ Pro W3", sans-serif; }
   html a, body a {
     text-decoration: none;
     color: #000; }
